--- a/train_binary_model.ipynb
+++ b/train_binary_model.ipynb
@@ -53,6 +53,7 @@
         "        padding='max_length',\n",
         "        return_attention_mask=True,\n",
         "        return_tensors='pt',\n",
+        "        truncation=True,\n",
         "        truncation=True\n",
         "    )\n",
         "\n",
