--- a/train_multiclass_model.ipynb
+++ b/train_multiclass_model.ipynb
@@ -962,6 +962,7 @@
         "            add_special_tokens=True,\n",
         "            max_length=self.max_len,\n",
         "            pad_to_max_length=True,\n",
+        "            truncation=True,\n",
         "            return_token_type_ids=True\n",
         "        )\n",
         "        ids = inputs['input_ids']\n",
