--- a/Preprocessing_datasets.ipynb
+++ b/Preprocessing_datasets.ipynb
@@ -27,6 +27,7 @@
     {
       "cell_type": "code",
       "source": [
+        "!pip install pandas==1.3.5\n",
         "!pip install pandas nltk\n",
         "!pip install pymorphy3\n",
         "!pip install nlpaug"
@@ -82,7 +83,7 @@
       "cell_type": "code",
       "source": [
         "#Для работы на TPU\n",
-        "!pip install --upgrade tensorflow"
+        "#!pip install --upgrade tensorflow"
       ],
       "metadata": {
         "id": "NolbQQvSeGD6",
